tests/specs/function_async.txt
# mod.ts
export async function a() {
  return;
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export async function a() {
  | ^

# output.txt
Defined in file:///mod.ts:0:1

async function a(): Promise<void>


# output.json
{
  "symbols": [
    {
      "name": "a",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 0,
            "byteIndex": 0
          },
          "declarationKind": "export",
          "kind": "function",
          "def": {
            "params": [],
            "returnType": {
              "repr": "Promise",
              "kind": "typeRef",
              "value": {
                "typeParams": [
                  {
                    "repr": "void",
                    "kind": "keyword",
                    "value": "void"
                  }
                ],
                "typeName": "Promise"
              }
            },
            "hasBody": true,
            "isAsync": true,
            "isGenerator": false,
            "typeParams": []
          }
        }
      ]
    }
  ]
}
